# gprob

./: .gitignore  LICENSE  pyproject.toml  readme.md
benchmarks/: timing-func.ipynb  timing-normal.ipynb  timing-parametric.ipynb
examples/: 1-random-variables.ipynb  2-array-operations.ipynb  3-sparse-arrays.ipynb  4-likelihood-fitting-fisher.ipynb  basics.ipynb  examples-basics.ipynb  examples-likelihood-fitting.ipynb  examples-spectral-domain-sparse.ipynb  gaussian-process.ipynb  langevin-causal-masking.ipynb  likelihood-fitting-II.ipynb  likelihood-fitting.ipynb  spectral-domain-sparse.ipynb  time-domain-langevin.ipynb
gprob/: __init__.py  arrayops.py  elementary.py  emaps.py  fft.py  func.py  latent.py  linalg.py  maps.py  normal.py  normal_.py  parametric.py  random.py  sparse.py
plaingaussian/: __init__.py  arrayops.py  elementary.py  emaps.py  fft.py  func.py  normal - Copy.py  normal.py  parametric.py
tests/: parametric.py  reffunc.py  test_array_func.py  test_arrayops.py  test_einsubs.py  test_func.py  test_imports.py  test_inference.py  test_normal.py  test_normal_array.py  test_parametric.py  test_sparse.py  utils.py
utils/: sparsegen.py
