[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gprob"
version = "0.7.1"
description = "Probabilistic programming with arrays of Gaussian variables."
requires-python = ">=3.9"
readme = "readme.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sergey Fedorov", email = "fedorov.s.a@outlook.com"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
keywords = [
    "Gaussian distribution",
    "Noise",
    "Random variables",
    "Stochastic processes",
    "Gaussian processes",
    "Probabilistic programming",
    "Python",
    "Numpy",
    "Scipy",
]
dependencies = []

[tool.setuptools]
packages=[
    "gprob"
]